2003-02-22  Ian Roxborough  <irox@ix.netcom.com>

	* gui/editorpane.tcl (Editor&::SearchForNext
	Editor&::Replace_String Editor&::insert_file_cb
	Editor&::SetFondPos Editor&::Indent):
	* gui/text.tcl (tkTextSelectTo tkTextSelectAll
	tkTextKeySelect tkTextMarkPara):
	* gui/multiview.tcl (MultiWindow&::edit_selectall):
	When setting the selection, raise the selection to
	highest level, otherwise the selected text will not
	have the selection foreground color and maybe be
	unreadable (i.e. light yellow text with a slightly
	different light yellow background).

2003-02-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/classtreepane.tcl (constructor):
	* gui/editorpane.tcl (constructor):
	* gui/includepane.tcl (constructor):
	* gui/xrefpane.tcl (constructor): Grid scrollbars
	and main window so that x scroll does not extend
	below the y scroll. This makes the Edit, Hierarchy,
	Xref, and Include tabs look correct.

2003-02-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/fortran/fortran.c: Regen.
	* parsers/fortran/fortran.y: Add patch from
	bug report 658664 to fix error generated by
	bison 1.75.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/README.TXT:
	* patches/tk_select.patch: Remove last patch
	and README.TXT file.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/libgui_print.patch: Remove libgui patch
	since it was just added to the libgui CVS.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/itk_component.patch: Remove itk patch
	since it was just added to the itk CVS.

2003-02-17  Ian Roxborough  <irox@ix.netcom.com>

	* gui/text.tcl (tkTextUndoPop): When they are no
	more undo operations on the undo stack, tell the
	editor to reset the modified status to unmodified.

2003-02-17  Ian Roxborough  <irox@ix.netcom.com>

	* gui/projmng.tcl (sn_select_project): On a
	Double click, don't invoke the open project
	proc until a ButtonRelease event is received.
	